[gd_scene load_steps=5 format=2]

[ext_resource path="res://Script/game.gd" type="Script" id=1]
[ext_resource path="res://Scene/RecipeSpawner.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scene/MaterialSpawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scene/GAME_HUD.tscn" type="PackedScene" id=4]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="GAME_HUD" parent="." instance=ExtResource( 4 )]

[node name="MaterialSpawner" parent="." instance=ExtResource( 3 )]
position = Vector2( -32, 352 )
direction = 1

[node name="MaterialSpawner3" parent="." instance=ExtResource( 3 )]
position = Vector2( -32, 96 )
direction = 1

[node name="MaterialSpawner2" parent="." instance=ExtResource( 3 )]
position = Vector2( 1112, 224 )
direction = -1

[node name="RecipeSpawner" parent="." instance=ExtResource( 2 )]
position = Vector2( 120, 576 )

[node name="RecipeSpawner2" parent="." instance=ExtResource( 2 )]
position = Vector2( 328, 576 )

[node name="RecipeSpawner3" parent="." instance=ExtResource( 2 )]
position = Vector2( 536, 576 )

[node name="RecipeSpawner4" parent="." instance=ExtResource( 2 )]
position = Vector2( 744, 576 )

[node name="RecipeSpawner5" parent="." instance=ExtResource( 2 )]
position = Vector2( 952, 576 )

[node name="Timer" type="Timer" parent="."]
[connection signal="increaseScore" from="RecipeSpawner" to="." method="_on_RecipeSpawner_increaseScore"]
[connection signal="increaseScore" from="RecipeSpawner2" to="." method="_on_RecipeSpawner_increaseScore"]
[connection signal="increaseScore" from="RecipeSpawner3" to="." method="_on_RecipeSpawner_increaseScore"]
[connection signal="increaseScore" from="RecipeSpawner4" to="." method="_on_RecipeSpawner_increaseScore"]
[connection signal="increaseScore" from="RecipeSpawner5" to="." method="_on_RecipeSpawner_increaseScore"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
